--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "font-awesome": "^4.7.0",
-    "waypoints": "^4.0.1"
+    "waypoints": "^4.0.1",
+    "youtube-background": "^1.0.14"
   }
 }
